# Deprecator_instr

./: Deprecator.cpp  Deprecator.h  DeprecatorClass.cpp  Deprecator_instr.txt  Deprecator_target.txt  Deprecatorconfig.json  Filewithno IDL  case.cpp  datafromstandard.txt  group  instrument.json  instrument.py  logfunction.cpp  matchidl.py  nofile.json  promblemfeature  return_target.txt  targetfunction.json  targetfunction.txt
Crawling/: Deprecator_target.txt  Top 100 alexa.txt  func_instr.json  model.py  stat.json
DeprecatorClass/: BUILD.gn  DeprecatorClass.cpp  DeprecatorClass.h
libtooling/: deprecate.sh
libtooling/deprecator_logging/: CMakeLists.txt  DeprecatorLogging.cpp  LLVMBuild.txt  deprecator_target.txt.sample
